# sentinel2-land-cover

./: .gitattributes  .gitignore  AI_AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  AREA_SELECTION_REPORT.md  CHANGELOG.md  CITY_CROPPING_METHODOLOGY.md  CONTRIBUTING.md  GITHUB_RELEASE_v1.1.0.md  LICENSE  OPTIMIZATION_REPORT.md  PREPROCESSING_REPORT.md  Project_Image_processing_in_python.docx  QUICKSTART.md  QUICK_PREVIEW_REPORT.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  explanation.docx  pyproject.toml  sentinel_login.py  sentinel_module_proj.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  download_auth_problem.yml  feature_request.yml
.github/workflows/: ci.yml
config/: area_cache.json  config.yaml.example
docs/: AI_AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  MAINTENANCE_GUIDE.md
notebooks/: city_analysis.ipynb  clustering_example.ipynb  download_example.ipynb
scripts/: analyze_city.py  api_server.py  app.py  classify_land_cover.py  crop_city_area.py  download_products.py  extract_all_bands.py  extract_swir_bands.py  kmeans_milano_optimized.py  quick_rgb_preview.py  select_area.py  setup.py  test_classifier_milano.py  validate_classification.py
src/satellite_analysis/: __init__.py  api.py  change_detection.py  exports.py
src/satellite_analysis/analyzers/: __init__.py
src/satellite_analysis/config/: __init__.py  settings.py
src/satellite_analysis/core/: __init__.py  config.py  ports.py  types.py
src/satellite_analysis/downloaders/: __init__.py  base.py  cropping_downloader.py  product_downloader.py
src/satellite_analysis/pipelines/: __init__.py  complete_pipeline.py  download_pipeline.py  preprocessing_pipeline.py
src/satellite_analysis/preprocessing/: __init__.py  normalization.py  reshape.py
tests/: conftest.py  test_api.py  test_area_selection.py  test_complete_workflow.py  test_paths.py  test_preprocessing_pipeline.py  test_registry.py  test_spectral_classifier.py  test_user_workflows.py
(+30 files in other folders)
